--- a/Html/index.html
+++ b/Html/index.html
@@ -4,10 +4,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Morocco</title>
-    <link rel="icon" href="images/morocco.png">
-    <link rel="stylesheet" href="Css/style.css">
+    <link rel="icon" href="/images/morocco.png">
+    <link rel="stylesheet" href="/Css/style.css">
     <script src="https://kit.fontawesome.com/e391ce7786.js" crossorigin="anonymous"></script>
-    <script src="JS/app.js" defer></script>
+    <script src="/JS/app.js" defer></script>
 </head>
 <body>
         <!--Header section.-->
