--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <script src="https://kit.fontawesome.com/e391ce7786.js" crossorigin="anonymous"></script>
     <script src="JS/app.js" defer></script>
 </head>
-<body style="background-image: url("//images/main.jpeg");">
+<body style="background-image: url("images/main.jpeg");">
         <!--Header section.-->
         <header>
             <h1 id="logo">Morocco</h1>
