--- a/index.html
+++ b/index.html
@@ -11,9 +11,9 @@
 </head>
 <body style="background-image: url('images/main.jpeg');">
         <!--Header section.-->
-        <header>
+        <header class="header">
             <h1 id="logo">Morocco</h1>
-            <nav>
+            <nav class="navbar">
                 <a href="#" class="nav-link">Home</a>
                 <a href="#" class="nav-link">About</a>
                 <div class="dropdown">
@@ -26,6 +26,9 @@
                 </div>
                 <a href="#" class="active">Discover</a>
             </nav>
+            <div class="toggle">
+                <button><i class="fas fa-bars"></i></button>
+            </div>
         </header>
 
         <section id="home">
