--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
             <nav class="navbar">
                 <a href="#" class="nav-link">Home</a>
                 <a href="#" class="nav-link">About</a>
-                <div class="dropdown" onmouseout="dropdown2()" onmouseover="dropdown1()">
+                <div class="dropdown">
                 <a href="#" id="drop" class="nav-link" onmouseout="dropdown2()" onmouseover="dropdown1()">Places <i class="fas fa-chevron-down"></i></a>
                    <div class="dropdown-content" onmouseout="dropdown2()" onmouseover="dropdown1()">
                        <a href="#" class="drop-btn">Chefchaouen</a>
