--- a/index.html
+++ b/index.html
@@ -32,6 +32,7 @@
             </div>
         </header>
 
+       <!--Home section-->
         <section id="home">
             <h1 id="title">Discover <span>Morocco</span></h1>
             <p>Choosing <span>Morocco</span> means a good traveling choice for you.</p>
