--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
     <title>Morocco</title>
     <link rel="icon" href="images/morocco.png">
     <link rel="stylesheet" href="Css/style.css">
+    <link href='https://fonts.googleapis.com/css?family=Merienda' rel='stylesheet'>
+    <link href='https://fonts.googleapis.com/css?family=Roboto' rel='stylesheet'>
     <script src="https://kit.fontawesome.com/e391ce7786.js" crossorigin="anonymous"></script>
     <script src="JS/app.js" defer></script>
 </head>
