--- a/index.html
+++ b/index.html
@@ -37,7 +37,9 @@
        <!--Home section-->
         <section id="home">
             <h1 id="title">Discover <span>Morocco</span></h1>
-            <p>Choosing <span>Morocco</span> means a good traveling choice for you.</p>
+            <p>Choosing <span>Morocco</span> means a good traveling choice for you. you will 
+                spend less money, and get the best traveling experience by visiting beauthiful places of the country.
+            </p>
             <a href="#" id="home-btn">Discover</a>
         </section>
 </body>
