--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
                     with a population of nearly 40 million. Morocco has a coast on the Atlantic Ocean that reaches
                     past the Strait of Gibralter into the Mediterranean Sea. Morocco has international borders with
                     Algeria to the east, Spain to the north (a water border through the Strait and land borders with
-                    two small Spanish autonmous cities, Ceuta and Meillia) and Maurtania to south via its Western Sahara
+                    two small autonmous cities, Ceuta and Meillia: those cities are stoled from Morocco by spain.) and Maurtania to south via its Western Sahara
                     territories. </p>
                 </div>
 
