--- a/index.html
+++ b/index.html
@@ -46,6 +46,7 @@
         <!--About section-->
         <section id="about">
             <h1 id="aboutitle">About <span>Morocco</span></h1>
+            <span id="line"></span>
             <!--1st-->
             <div class="column">
 
