--- a/index.html
+++ b/index.html
@@ -21,14 +21,14 @@
                 <a href="#" class="nav-link" onclick="removeNav()">Home</a>
                 <a href="#about" class="nav-link" onclick="removeNav()">About</a>
                 <div class="dropdown">
-                <a href="#" id="drop" class="nav-link" onmouseout="dropdown2()" onmouseover="dropdown1()">Places <i class="fas fa-chevron-down"></i></a>
+                <a href="#discover" id="drop" class="nav-link" onmouseout="dropdown2()" onmouseover="dropdown1()">Places <i class="fas fa-chevron-down"></i></a>
                    <div class="dropdown-content" onmouseout="dropdown2()" onmouseover="dropdown1()">
                        <a href="#" class="drop-btn">Chefchaouen</a>
                        <a href="#" class="drop-btn1">Marrakech</a>
-                       <a href="#" class="drop-btn2">Fes</a>
+                       <a href="#" class="drop-btn2">Sahara</a>
                    </div>
                 </div>
-                <a href="#" class="active">Discover</a>
+                <a href="#discover" class="active">Discover</a>
             </nav>
             <div class="toggle">
                 <button><i class="fas fa-bars"></i></button>
@@ -41,7 +41,7 @@
             <p>Choosing <span>Morocco</span> means a good traveling choice for you. you will 
                 spend less money, and get the best traveling experience by visiting beauthiful places of the country.
             </p>
-            <a href="#" id="home-btn">Discover</a>
+            <a href="#discover" id="home-btn">Discover</a>
         </section>
         <!--About section-->
         <section id="about">
@@ -81,5 +81,32 @@
                     <img src="images/jamaa.jpeg" alt="">
             </div>
         </section>
+
+        <!--Discover section-->
+        <section id="discover">
+            <h1 id="discovertitle">Best Places</h1>
+
+            <main>
+            <div class="place">
+                <a href="#"><img src="images/chefchaouen.jpeg" alt="chefchaouen"></a>
+                <a href="#"><h2>Chefchaouen</h2></a>
+                <p>Chefchaouen is the beathiful city of Morocco, people from different places of the world come to it.</p>
+            </div>
+
+            <div class="place">
+                <a href="#"><img src="images/marakech.jpg" alt="marrakech"></a>
+                <a href="#"><h2>Marrakech</h2></a>
+                <p>Marrakech is one of the biggest cities in Morocco, a lot of people visits it because of it’s culture.</p>
+            </div>
+
+            <div class="place">
+                <a href="#"><img src="images/sahara.jpeg" alt="Sahara"></a>
+                <a href="#"><h2>Sahara</h2></a>
+                <p>Sahara is a biggest area in the south of Morocco country It is characterized by its huge desert.</p>
+            </div>
+        </main>
+        </section>
+
+        <a href="#" id="cursor"><i class="fas fa-arrow-circle-up"></i></a>
 </body>
 </html>
