--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
             <div class="place">
                 <a href="#"><img src="images/sahara.jpeg" alt="Sahara"></a>
                 <a href="#"><h2>Sahara</h2></a>
-                <p>Sahara is a biggest area in the south of Morocco country It is characterized by its huge desert.</p>
+                <p>Sahara is a biggest area in the south of Morocco country. It is characterized by its huge desert.</p>
             </div>
         </main>
         </section>
