--- a/index.html
+++ b/index.html
@@ -23,9 +23,9 @@
                 <div class="dropdown">
                 <a href="#discover" id="drop" class="nav-link" onmouseout="dropdown2()" onmouseover="dropdown1()">Places <i class="fas fa-chevron-down"></i></a>
                    <div class="dropdown-content" onmouseout="dropdown2()" onmouseover="dropdown1()">
-                       <a href="#" class="drop-btn">Chefchaouen</a>
-                       <a href="#" class="drop-btn1">Marrakech</a>
-                       <a href="#" class="drop-btn2">Sahara</a>
+                       <a style="border-bottom:1px solid #ccc" href="#" class="drop-btn">Chefchaouen</a>
+                       <a style="border-bottom:1px solid #ccc" href="#" class="drop-btn1">Marrakech</a>
+                       <a style="border-bottom:1px solid #ccc" href="#" class="drop-btn2">Sahara</a>
                    </div>
                 </div>
                 <a href="#discover" class="active">Discover</a>
@@ -106,6 +106,16 @@
             </div>
         </main>
         </section>
+<!--Footer Section-->
+        <footer>
+            <a href="#"><h1>Morocco</h1></a>
+            <p> Made with ❤️ by<a style="color: crimson;" href="https://github.com/Aoussiad-Mehdi" target="_blank"> Mehdi Aoussiad</a>.</p>
+            <div class="sm">
+                <a href="https://github.com/Aoussiad-Mehdi"><i class="fab fa-github"></i></a>
+                <a href="https://www.linkedin.com/in/mehdi-aoussiad-0615321b0/"><i class="fab fa-linkedin"></i></a>
+                <a href="https://www.facebook.com/mehdi.aoussiad/"><i class="fab fa-facebook"></i></a>
+            </div>
+        </footer>
 
         <a href="#" id="cursor"><i class="fas fa-arrow-circle-up"></i></a>
 </body>
