--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
                    <div class="dropdown-content" onmouseout="dropdown2()" onmouseover="dropdown1()">
                        <a style="border-bottom:1px solid #ccc" href="#" class="drop-btn">Chefchaouen</a>
                        <a style="border-bottom:1px solid #ccc" href="#" class="drop-btn1">Marrakech</a>
-                       <a style="border-bottom:1px solid #ccc" href="#" class="drop-btn2">Sahara</a>
+                       <a href="#" class="drop-btn2">Sahara</a>
                    </div>
                 </div>
                 <a href="#discover" class="active">Discover</a>
