--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
 <!--Footer Section-->
         <footer>
             <a href="#"><h1>Morocco</h1></a>
-            <p> Made with ❤️ by<a style="color: crimson;" href="https://github.com/Aoussiad-Mehdi" target="_blank"> Mehdi Aoussiad</a>.</p>
+            <p> Made with ❤️ by<a style="color: crimson; font-weight: 700;" href="https://github.com/Aoussiad-Mehdi" target="_blank"> Mehdi Aoussiad</a>.</p>
             <div class="sm">
                 <a href="https://github.com/Aoussiad-Mehdi"><i class="fab fa-github"></i></a>
                 <a href="https://www.linkedin.com/in/mehdi-aoussiad-0615321b0/"><i class="fab fa-linkedin"></i></a>
