--- a/index.html
+++ b/index.html
@@ -89,19 +89,19 @@
             <main>
             <div class="place">
                 <a href="#"><img src="images/chefchaouen.jpeg" alt="chefchaouen"></a>
-                <a href="#"><h2>Chefchaouen</h2></a>
+                <a href="#"><h2><i class="fas fa-map-marker-alt"></i> Chefchaouen</h2></a>
                 <p>Chefchaouen is the beathiful city of Morocco, people from different places of the world come to it.</p>
             </div>
 
             <div class="place">
                 <a href="#"><img src="images/marakech.jpg" alt="marrakech"></a>
-                <a href="#"><h2>Marrakech</h2></a>
+                <a href="#"><h2><i class="fas fa-map-marker-alt"></i> Marrakech</h2></a>
                 <p>Marrakech is one of the biggest cities in Morocco, a lot of people visits it because of it’s culture.</p>
             </div>
 
             <div class="place">
                 <a href="#"><img src="images/sahara.jpeg" alt="Sahara"></a>
-                <a href="#"><h2>Sahara</h2></a>
+                <a href="#"><h2><i class="fas fa-map-marker-alt"></i> Sahara</h2></a>
                 <p>Sahara is a biggest area in the south of Morocco country. It is characterized by its huge desert.</p>
             </div>
         </main>
@@ -120,3 +120,4 @@
         <a href="#" id="cursor"><i class="fas fa-arrow-circle-up"></i></a>
 </body>
 </html>
+
