--- a/index.html
+++ b/index.html
@@ -23,9 +23,9 @@
                 <div class="dropdown">
                 <a href="#discover" id="drop" class="nav-link" onclick="removeNav()" onmouseout="dropdown2()" onmouseover="dropdown1()">Places <i class="fas fa-chevron-down"></i></a>
                    <div class="dropdown-content" onmouseout="dropdown2()" onmouseover="dropdown1()">
-                       <a style="border-bottom:1px solid #ccc" href="#" class="drop-btn">Chefchaouen</a>
-                       <a style="border-bottom:1px solid #ccc" href="#" class="drop-btn1">Marrakech</a>
-                       <a href="#" class="drop-btn2">Sahara</a>
+                       <a style="border-bottom:1px solid #ccc" href="places.html#chechaouen" class="drop-btn">Chefchaouen</a>
+                       <a style="border-bottom:1px solid #ccc" href="places.html#marrakech" class="drop-btn1">Marrakech</a>
+                       <a href="places.html#sahara" class="drop-btn2">Sahara</a>
                    </div>
                 </div>
                 <a href="#discover" class="active" onclick="removeNav()">Discover</a>
@@ -88,19 +88,19 @@
 
             <main>
             <div class="place">
-                <a href="#"><img src="images/chefchaouen.jpeg" alt="chefchaouen"></a>
-                <a href="#"><h2><i class="fas fa-map-marker-alt"></i> Chefchaouen</h2></a>
+                <a href="places.html#chefchaouen"><img src="images/chefchaouen.jpeg" alt="chefchaouen"></a>
+                <a href="places.html"><h2><i class="fas fa-map-marker-alt"></i> Chefchaouen</h2></a>
                 <p>Chefchaouen is the beathiful city of Morocco, people from different places of the world come to it.</p>
             </div>
 
             <div class="place">
-                <a href="#"><img src="images/marakech.jpg" alt="marrakech"></a>
+                <a href="places.html#marrakech"><img src="images/marakech.jpg" alt="marrakech"></a>
                 <a href="#"><h2><i class="fas fa-map-marker-alt"></i> Marrakech</h2></a>
                 <p>Marrakech is one of the biggest cities in Morocco, a lot of people visits it because of it’s culture.</p>
             </div>
 
             <div class="place">
-                <a href="#"><img src="images/sahara.jpeg" alt="Sahara"></a>
+                <a href="places.html#sahara"><img src="images/sahara.jpeg" alt="Sahara"></a>
                 <a href="#"><h2><i class="fas fa-map-marker-alt"></i> Sahara</h2></a>
                 <p>Sahara is a biggest area in the south of Morocco country. It is characterized by its huge desert.</p>
             </div>
