--- a/index.html
+++ b/index.html
@@ -3,6 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Morocco is one of the best places to travel. it's a safe country that offers the best experience of traveling.">
+    <meta name="keywords" content="Morocco,travel,chefchaouen,marrakech,sahara">
+    <meta name="author" content="Mehdi Aoussiad">
     <title>Morocco</title>
     <link rel="icon" href="images/morocco.png">
     <link rel="stylesheet" href="Css/style.css">
@@ -10,7 +13,8 @@
     <link href='https://fonts.googleapis.com/css?family=Merienda' rel='stylesheet'>
     <link href='https://fonts.googleapis.com/css?family=Roboto' rel='stylesheet'>
     <script src="https://kit.fontawesome.com/e391ce7786.js" crossorigin="anonymous"></script>
-    <script src="JS/app.js" defer></script>
+    <script src="JS/app.js" defer="true"></script>
+    <script src="JS/animation.js" defer="true"></script>
 </head>
 
 <body style="background-image: url('images/main.jpeg');">
@@ -43,6 +47,10 @@
             </p>
             <a href="#discover" id="home-btn">Discover</a>
         </section>
+        <!--cursor animation-->
+        <a href="#about"><div class="animated-cursor">
+            <div class="circle"></div>
+        </div></a>
         <!--About section-->
         <section id="about">
             <h1 id="aboutitle">About <span>Morocco</span></h1>
