--- a/places.html
+++ b/places.html
@@ -3,6 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Morocco is one of the best places to travel. it's a safe country that offers the best experience of traveling.">
+    <meta name="keywords" content="Morocco,travel,chefchaouen,marrakech,sahara">
+    <meta name="author" content="Mehdi Aoussiad">
     <title>Morocco</title>
     <link rel="icon" href="images/morocco.png">
     <link rel="stylesheet" href="Css/places.css">
