--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
                        <a href="places.html#sahara" class="drop-btn2">Sahara</a>
                    </div>
                 </div>
-                <a href="#discover" class="active" onclick="removeNav()">Discover</a>
+                <a href="#counters" class="active" onclick="removeNav()">Discover</a>
             </nav>
             <div class="toggle">
                 <button><i class="fas fa-bars"></i></button>
@@ -45,7 +45,7 @@
             <p>Choosing <span>Morocco</span> means a good traveling choice for you. you will 
                 spend less money, and get the best traveling experience by visiting beauthiful places of the country.
             </p>
-            <a href="#discover" id="home-btn">Discover</a>
+            <a href="#counters" id="home-btn">Discover</a>
         </section>
         <!--cursor animation-->
         <a href="#about"><div class="animated-cursor">
@@ -88,6 +88,29 @@
     
                     <img src="images/jamaa.jpeg" alt="">
             </div>
+        </section>
+        
+        <!--Counter Section-->
+        <section id="counters">
+            <div class="container">
+            <div class="box">
+                <i class="fas fa-users"></i>
+                <div class="counter" data-target="40000000">0</div>
+                <h2>Population</h2>
+            </div>
+
+            <div class="box">
+                <i class="fas fa-city"></i>
+                <div class="counter" data-target="221">0</div>
+                <h2>Cities</h2>
+            </div>
+
+            <div class="box">
+                <i class="fas fa-th"></i>
+                <div class="counter" data-target="710850">0</div><span>Km²</span>
+                <h2>Space</h2>
+            </div>
+        </div>
         </section>
 
         <!--Discover section-->
