--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
 
             <div class="box">
                 <i class="fas fa-th"></i>
-                <div class="counter" data-target="710850">0</div><span>Km²</span>
+                <div class="counter" data-target="710850">0</div>
                 <h2>Space</h2>
             </div>
         </div>
