--- a/index.html
+++ b/index.html
@@ -13,8 +13,8 @@
     <link href='https://fonts.googleapis.com/css?family=Merienda' rel='stylesheet'>
     <link href='https://fonts.googleapis.com/css?family=Roboto' rel='stylesheet'>
     <script src="https://kit.fontawesome.com/e391ce7786.js" crossorigin="anonymous"></script>
-    <script src="JS/app.js" defer="true"></script>
-    <script src="JS/animation.js" defer="true"></script>
+    <script src="JS/app.js" defer></script>
+    <script src="JS/animation.js" defer></script>
 </head>
 
 <body style="background-image: url('images/main.jpeg');">
@@ -107,7 +107,7 @@
 
             <div class="box">
                 <i class="fas fa-th"></i>
-                <div class="counter" data-target="710850">0</div>
+                <div class="counter" data-target="710850">0</div><span>Km²</span>
                 <h2>Space</h2>
             </div>
         </div>
