updating the markup

--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
                     territories. </p>
                 </div>
 
-                <img src="images/morocco.png" alt="">
+                <img src="images/morocco.png" alt="Morocco-flag">
             </div>
              <!--2nd-->
             <div class="column">
@@ -86,7 +86,7 @@
                         Gardens. </p>
                     </div>
     
-                    <img src="images/jamaa.jpeg" alt="">
+                    <img src="images/jamaa.jpeg" alt="place">
             </div>
         </section>
         
